# gkr

./: Cargo.toml  README.md
gkr/: Cargo.toml
gkr/src/: lib.rs  poly.rs  util.rs
gkr/src/circuit/: gkr_circuit.rs  mod.rs
gkr/src/plain/: gkr.rs  mod.rs  scalar_mul.rs  sumcheck.rs  utils.rs
gkr/src/plain/hash/: mod.rs  poseidon2.rs  poseidon2_gkr.rs  poseidon2_instance_bn256.rs  poseidon2_params.rs
gkr/src/poly/: multivariate.rs  univariate.rs
gkr/src/util/: arithmetic.rs  expression.rs  transcript.rs
gkr/src/util/arithmetic/: msm.rs
