[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand = "0.8"
sha3 = "0.10.6"

poseidon = { git = "https://github.com/han0110/poseidon", branch = "feature/with-spec" }
poseidon2 = { git = "https://github.com/amit0365/poseidon2"}
halo2_proofs = { git = "https://github.com/amit0365/halo2", branch = "protostar"}

# timer
ark-std = { version = "^0.4.0", default-features = false, optional = true }

# parallel
rayon = { version = "1.5.3", optional = true }